# django-detect-duplicate-queries

./: .gitignore  pyproject.toml
duplicate_queries/: __init__.py
tests/: django_settings.py  test_detect_duplicate_queries.py
tests/app/: models.py
tests/app/migrations/: 0001_initial.py
