[tool.poetry]
name = "django-detect-duplicate-queries"
version = "0.1.0"
description = "Detect duplicate queries in Django apps"
authors = ["Orhan Hirsch <orhanhenrik@gmail.com>"]
readme = "README.md"
packages = [{include = "duplicate_queries"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-django = "^4.5.2"
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.django_settings"